--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'com.github.johnrengelman.shadow' version '5.0.0'
     id 'java'
 }
 
@@ -12,7 +13,13 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    implementation "org.javacord:javacord:3.3.2"
+    implementation("org.javacord:javacord:3.3.2")
+}
+
+jar {
+    manifest {
+        attributes('Main-Class': 'WhoJoinedBot')
+    }
 }
 
 test {
